Trying to fix z-index problem with iOS

--- a/nodeserver/src/resources/sass/main.scss
+++ b/nodeserver/src/resources/sass/main.scss
@@ -165,6 +165,7 @@ a:active {
             height: 100%;
             width: 100%;
             z-index: 1;
+            -webkit-transform: translate3d(0,0,0);
             span {
               position: absolute;
             }
